--- a/action.yml
+++ b/action.yml
@@ -272,4 +272,5 @@ runs:
 post: 
   runs: 
     - name: post
-      run: cd ${{ inputs.kernel-dir }} && bash $GITHUB_ACTION_PATH/post.sh
+      shell: bash
+      run:  bash $GITHUB_ACTION_PATH/post.sh
