--- a/action.yml
+++ b/action.yml
@@ -234,13 +234,11 @@ runs:
       shell: bash
       run: |
          cd ${{ inputs.kernel-dir }}
-         wget https://github.com/wu17481748/lxc-docker/raw/main/LXC-DOCKER-OPEN-CONFIG.sh
-         bash LXC-DOCKER-OPEN-CONFIG.sh
+         wget https://github.com/dabao1955/android_lxc/raw/main/lxc-setup
          if [ ${{ inputs.lxc-patch }} = true ]; then
-            wget https://github.com/wu17481748/lxc-docker/raw/main/lxc.patch
-            git apply lxc.patch
+            bash lxc-setup --lxc-patch=true
          else
-             rm -rf LXC-DOCKER-OPEN-CONFIG.sh
+             bash lxc-setup
          fi
 
     - name: build kernel with clang
