--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,3 +54,5 @@ jobs:
           python-27: true
           disable-lto: true
           overlayfs: true
+          lxc: true
+          lxc-patch: true
