--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,4 @@ jobs:
           disable-lto: true
           overlayfs: true
           lxc: true
-          lxc-patch: true
+          lxc-patch: false
