--- a/action.yml
+++ b/action.yml
@@ -316,6 +316,7 @@ runs:
       if: inputs.anykernel3 == 'true'
       run: | 
         git clone https://github.com/osm0sis/AnyKernel3
+        sed -i 's!block=/dev/block/platform/omap/omap_hsmmc.0/by-name/boot;!block=auto;!g' AnyKernel3/anykernel.sh
         sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
         sed -i 's/is_slot_device=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
         
