--- a/action.yml
+++ b/action.yml
@@ -245,6 +245,7 @@ runs:
          cd ${{ inputs.kernel-dir }}
          wget https://github.com/wu17481748/lxc-docker/raw/main/LXC-DOCKER-OPEN-CONFIG.sh
          bash LXC-DOCKER-OPEN-CONFIG.sh ${{ inputs.config }} -w
+         grep -q "CONFIG_ANDROID_PARANOID_NETWORK" "arch/${{ inputs.arch }}/configs/${{ inputs.config }}" && sed -i 's/CONFIG_ANDROID_PARANOID_NETWORK=y/#CONFIG_ANDROID_PARANOID_NETWORK=y/' arch/${{ inputs.arch }}/configs/${{ inputs.config }}
          if [ ${{ inputs.lxc-patch }} = true ]; then
              wget https://github.com/wu17481748/lxc-docker/raw/main/cgroup.patch
              patch kernel/cgroup/cgroup.c < cgroup.patch
