fix logout typo

--- a/action.yml
+++ b/action.yml
@@ -110,12 +110,16 @@ runs:
       
     - name: install package
       shell: bash
-      run: sudo apt install -y binutils binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python3
+      run: |
+         echo "::group::Installing Building Depend Packages"
+         sudo apt install -y binutils binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python3
+         echo "::endgroup::"
 
     - name: download aosp-gcc
       shell: bash
       if: inputs.aosp-gcc == 'true'
       run: |
+        echo "::group::Downloading AOSP GCC"
         if [ ${{ inputs.aosp-clang }} = true ]; then
             mkdir -p -v $HOME/gcc-64
             wget -q -O gcc-aarch64.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz
@@ -127,11 +131,13 @@ runs:
             git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/ --depth=1 -b android${{ inputs.android-version }}-release $HOME/gcc-64
             git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/ --depth=1 -b android${{ inputs.android-version }}-release $HOME/gcc-32
         fi
+        echo "::endgroup::"
 
     - name: download Android-NDK
       if: inputs.android-ndk == 'true'
       shell: bash
       run: |
+        echo "::group::Downloading Android NDK"
         if [ ${{ inputs.aosp-gcc }} = false ]; then
             echo
             if [ ${{ inputs.android-ndk-x64 }} = false ]; then
@@ -146,7 +152,8 @@ runs:
             echo "Please disable aosp-gcc and aosp-clang."
             exit 127
         fi
-        
+        echo "::endgroup::"
+
         export HOMES=$(pwd) 
         export LLVMS=$HOME/android-ndk-${{ inputs.android-ndk-version }}/toolchains/llvm/prebuilt/linux-x86_64/bin
         cd $LLVMS
@@ -159,15 +166,18 @@ runs:
     - name: use python 2.7
       if: inputs.python-27 == 'true'
       run: |
+        echo "::group::Installing Python2.7 instead Python3"
         sudo apt install -y -q python2.7 python2.7-minimal
-        sudo rm /bin/python
+        sudo rm -v /bin/python
         sudo ln -s /bin/python2.7 /bin/python
         sudo ln -s /bin/python2.7 /bin/python2
+        echo "::endgroup::"
       shell: bash
 
     - name: download aosp clang
       if: inputs.aosp-clang == 'true'
       run: |
+        echo "::group::Downloading AOSP clang"
         if [ ${{ inputs.aosp-gcc }} = true ]; then
             mkdir $HOME/clang -p -v 
             wget -q https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android${{ inputs.android-version }}-release/clang-${{ inputs.aosp-clang-version }}.tar.gz
@@ -176,17 +186,22 @@ runs:
             echo "Please enable aosp-gcc."
             exit 127
         fi
+        echo "::endgroup::"
       shell: bash
 
     - name: pull kernel source from selected branch
       run: |
+        echo "::group::Pulling Kernel Source"
         git clone ${{ inputs.kernel-url }} -b "${{ inputs.branch }}" --depth=1 ${{ inputs.kernel-dir }}
+        echo "::endgroup::"
       shell: bash
 
     - name: pull vendor source
       if: inputs.vendor == 'true'
       run: |
+        echo "::group::Pulling Kernel vendor source"
         git clone ${{ inputs.vendor-url }} --depth=1 ${{ inputs.vendor-dir }}
+        echo "::endgroup::"
       shell: bash
 
     - name: Setup ccache 
@@ -204,8 +219,10 @@ runs:
     - name: pull kernelsu
       if: inputs.ksu == 'true'
       run: |
+        echo "::group::Installing KernelSU"
         cd ${{ inputs.kernel-dir }}
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s ${{ inputs.ksu-version }}
+        echo "::endgroup::"
       shell: bash
 
     - name: disable lto
@@ -242,6 +259,7 @@ runs:
       if: inputs.lxc == 'true'
       shell: bash
       run: |
+         echo "::group::Enabling LXC"
          cd ${{ inputs.kernel-dir }}
          wget https://github.com/wu17481748/lxc-docker/raw/main/LXC-DOCKER-OPEN-CONFIG.sh
          bash LXC-DOCKER-OPEN-CONFIG.sh ${{ inputs.config }} -w
@@ -254,10 +272,12 @@ runs:
          else
              echo skip lxc patch
          fi
+         echo "::endgroup::"
 
     - name: build kernel with clang
       if: inputs.aosp-clang == 'true'
       run: |
+        echo "::group::Building Kernel"
         cd ${{ inputs.kernel-dir }}
         mkdir -p -v out
         export CLANG_PATH=$HOME/clang
@@ -269,11 +289,13 @@ runs:
         else
             make -j$(nproc --all) CROSS_COMPILE=$HOME/gcc-64/bin/aarch64-linux-android- COMPILE_ARM32=$HOME/gcc-32/bin/arm-linux-androideabi- CLANG_TRIPLE=aarch64-linux-gnu- CC=clang ARCH=${{ inputs.arch }} O=out ${{ inputs.extra-cmd }}
         fi
+        echo "::endgroup::"
       shell: bash
 
     - name: build kernel with gcc
       if: inputs.aosp-gcc == 'true'
       run: |
+        echo "::group::Building Kernel use GCC"
         if [ ${{ inputs.aosp-clang }} = false ]; then
             cd ${{ inputs.kernel-dir }}
             mkdir -p -v out
@@ -282,13 +304,14 @@ runs:
         else
             echo 
         fi
-            
+        echo "::endgroup::"
       shell: bash
 
     - name: build kernel with android-ndk
       if: inputs.android-ndk == 'true'
       shell: bash
       run: |
+        echo "::group::Building Kernel with Android NDK"
         cd ${{ inputs.kernel-dir }}
         mkdir -p -v out
         export CLANG_PATH=$HOME/android-ndk-${{ inputs.android-ndk-version }}/toolchains/llvm/prebuilt/linux-x86_64
@@ -300,12 +323,13 @@ runs:
         else
             make -j$(nproc --all) CROSS_COMPILE=$CLANG_PATH/bin/llvm- COMPILE_ARM32=$CLANG_PATH/bin/llvm- CLANG_TRIPLE=aarch64-linux-android$(( ${{ inputs.android-version }} + 19 ))- CC=clang ARCH=${{ inputs.arch }} O=out ${{ inputs.extra-cmd }}
         fi
-      
+        echo "::endgroup::"
 
     - name: copy kernel
       if: inputs.anykernel3 == 'false'
       shell: bash
       run: |
+        echo "::group::Preparing to Upload bare-compiled-kernel"
         mkdir -p -v build
         if [ -f ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/Image.*-dtb ]; then
            cp ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/Image.*-dtb build -rv
@@ -314,10 +338,12 @@ runs:
         else
            cp ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/Image build -rv
         fi
+        echo "::endgroup::"
 
     - name: package with anykernel3
       if: inputs.anykernel3 == 'true'
       run: | 
+        echo "::group::Packaging Anykernel3 flasher"
         git clone https://github.com/osm0sis/AnyKernel3
         sed -i 's!block=/dev/block/platform/omap/omap_hsmmc.0/by-name/boot;!block=auto;!g' AnyKernel3/anykernel.sh
         sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
@@ -332,6 +358,7 @@ runs:
         test -f ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/dtbo.img && cp ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/dtbo.img AnyKernel3/
         
         rm -rf AnyKernel3/.git* AnyKernel3/README.md
+        echo "::endgroup::"
       shell: bash
 
     - id: uploadi
